--- a/sass/components/_alert.scss
+++ b/sass/components/_alert.scss
@@ -1,6 +1,7 @@
 /*ALERT SECTION*/
 .alert {
     position: relative;
+    width: 100%;
     background-color: $color-alert;
     text-align: center;
     padding: 1.8rem;
