--- a/sass/components/_featured.scss
+++ b/sass/components/_featured.scss
@@ -20,6 +20,10 @@
     &__title {
         text-transform: uppercase;
         font-size: 1.4rem;
+
+        @include respond(phone) {
+            font-size: 1.2rem;
+        }
     }
 }
 
