--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,7 @@
 
 .hero {
     height: 90vh;
+    width: 100%;
     background-image: url(../img/hero-image-large.jpg);
     background-size: cover;
     background-position: center;
@@ -31,6 +32,11 @@
 
     /* animation-iteration-count: 2; */
     /* animation-delay: 2s; */
+
+    @include respond(phone) {
+        font-size: 1.6rem;
+        margin-top: 1.5rem;
+    }
 }
 
 .home__intro {
@@ -41,6 +47,11 @@
         font-size: 1.8rem;
         text-transform: uppercase;
         margin-bottom: 1.5rem;
+
+        @include respond(phone) {
+            font-size: 1.4rem;
+        }
+        
     }
 
     &__text {
