--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,10 @@
 @import "components/alert";
 @import "components/featured";
 @import "components/contact";
+@import "components/hero";
+@import "components/intro";
+
+
 
 @import "layout/header";
 @import "layout/footer";
