--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,11 @@ img {
 .alert__text--a:hover {
   text-decoration: underline; }
 
+@media (max-width: 37.5em) {
+  .featured {
+    margin-top: 0;
+    margin-bottom: 2.5rem; } }
+
 .featured__item {
   box-sizing: border-box;
   width: 100%;
@@ -140,6 +145,9 @@ img {
 
 .featured__image {
   align-content: center; }
+  @media (max-width: 37.5em) {
+    .featured__image {
+      display: none; } }
 
 .featured__icon {
   font-size: .2rem;
@@ -183,6 +191,22 @@ img {
     @media (max-width: 37.5em) {
       .contact__details {
         font-size: 1.3rem; } }
+
+/*PAGE HERO section*/
+.hero__page {
+  height: 70vh;
+  width: 100%;
+  background-image: url(../img/about--hero-image.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative; }
+
+.intro {
+  padding: 3rem 0; }
+  .intro__text {
+    font-size: 2rem;
+    line-height: 2.8rem;
+    font-weight: 300; }
 
 .header {
   position: fixed;
@@ -305,7 +329,9 @@ img {
       padding: 10px 25px; }
     .btn__secondary--nav .btn__secondary--nav--a:hover {
       color: #e1dfd0;
-      transition: all .4s; } }
+      transition: all .4s; }
+    .btn__secondary--nav .btn__secondary--nav--a:active {
+      color: #e1dfd0; } }
 
 /*MENU SECTION ENDS*/
 footer {
