--- a/sass/components/_intro.scss
+++ b/sass/components/_intro.scss
@@ -1,11 +1,20 @@
 .intro {
     padding: 3rem 0;
+    max-width: 70%;
+
+    @include respond(phone) {
+        padding: 0;
+        max-width: 90%;
+    }
 
     &__text {
         font-size: 2rem;
         line-height: 2.8rem;
         font-weight: 300;
-        
-    
+
+        @include respond(phone) {
+            font-size: 1.2rem;
+            line-height: 2.4rem;
+        }
     }
 }
