Contact section with Form is finished

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -5,5 +5,8 @@ $color-light-2: #bab491;
 $color-medium: #6e6745;
 $color-dark: #2f2c1e;
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
 $color-white: #fff;
 $color-alert: #fceba9;
+$color-form-invalid: #ff7730;
+$color-form-valid: #55c57a;
