--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,9 @@ $breakpoint argument choices:
 /*Font Families- Google Font*/
 body {
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 16px;
+  font-size: 1.2rem;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: 1.9;
   background-color: #fff; }
 
 img {
@@ -81,13 +81,17 @@ img {
 .u-margin__bottom--large {
   margin-bottom: 3.5rem; }
 
-.btn__primary:link, .btn__primary:visited {
+.btn__primary, .btn__primary:link, .btn__primary:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 15px 30px;
   display: inline-block;
   transition: all .2s;
-  animation: moveInRight 1s ease-out; }
+  font-family: inherit;
+  font-size: inherit;
+  animation: moveInRight 1s ease-out;
+  border: none;
+  cursor: pointer; }
 
 .btn__primary:hover {
   transform: translateY(-3px);
@@ -125,13 +129,15 @@ img {
   text-align: center;
   padding: 1.8rem; }
 
-.alert__text--a {
-  text-decoration: none;
-  color: #2f2c1e;
-  font-weight: 700; }
-
-.alert__text--a:hover {
-  text-decoration: underline; }
+.alert__text {
+  font-size: 1.2rem;
+  font-weight: 300; }
+  .alert__text--a {
+    text-decoration: none;
+    color: #2f2c1e;
+    font-weight: 700; }
+  .alert__text--a:hover {
+    text-decoration: underline; }
 
 @media (max-width: 37.5em) {
   .featured {
@@ -162,6 +168,10 @@ img {
     .featured__title {
       font-size: 1.2rem; } }
 
+.featured__text {
+  font-size: 1.2rem;
+  font-weight: 300; }
+
 @media (min-width: 1250px) {
   .featured {
     display: flex;
@@ -179,7 +189,9 @@ img {
     padding: 2rem 0;
     text-align: center; }
   .contact__text {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
+    line-height: 1.9;
+    font-weight: 300;
     width: 80%;
     margin: 0 auto; }
   .contact__details {
@@ -192,6 +204,10 @@ img {
     @media (max-width: 37.5em) {
       .contact__details {
         font-size: 1.3rem; } }
+  .contact__form {
+    text-align: center;
+    width: 50vw;
+    margin: 0 auto; }
 
 /*PAGE HERO section*/
 .hero__page {
@@ -243,6 +259,43 @@ img {
         font-size: 1.2rem;
         font-weight: 400;
         line-height: 2rem; } }
+
+.form {
+  text-align: left; }
+  .form__group:not(:last-child) {
+    margin-bottom: 1.3rem; }
+  .form__input {
+    font-size: 1.4rem;
+    font-family: inherit;
+    color: inherit;
+    padding: 1.5rem 2rem;
+    background-color: #fff;
+    border: none;
+    border-bottom: 2px solid transparent;
+    width: 100%;
+    display: block; }
+    .form__input:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(47, 44, 30, 0.1);
+      border-bottom: 2px solid #55c57a; }
+    .form__input:focus:invalid {
+      border-bottom: 2px solid #ff7730; }
+    .form__input::-webkit-input-placeholder {
+      color: #777; }
+  .form__input--message {
+    font-size: 1.2rem;
+    line-height: 1.7rem; }
+  .form__label {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-left: 2rem;
+    margin-top: .5rem;
+    display: block;
+    color: #777;
+    transition: all .3s; }
+  .form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden; }
 
 .header {
   position: fixed;
@@ -500,4 +553,6 @@ footer {
         font-size: 1.4rem; } }
   .home__intro__text {
     width: 80%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    font-size: 1.4rem;
+    font-weight: 300; }
