--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,9 +11,9 @@
 /*Font Families- Google Font*/
 body {
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
+    font-size: 1.2rem;
     font-weight: 400;
-    line-height: 1.7;
+    line-height: 1.9;
     background-color: $color-white;
 } 
 
