--- a/sass/components/_alert.scss
+++ b/sass/components/_alert.scss
@@ -8,6 +8,8 @@
 }
 
 .alert__text {
+    font-size: 1.2rem;
+    font-weight: 300;
 
     &--a {
         text-decoration: none;
@@ -16,6 +18,6 @@
     }
 
     &--a:hover {
-        text-decoration: underline;    
+        text-decoration: underline;
     }
 }
