--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,5 +1,6 @@
 
 .btn__primary {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -7,8 +8,14 @@
         padding: 15px 30px;
         display: inline-block;
         transition: all .2s;
+        font-family: inherit;
+        font-size: inherit;
 
         animation: moveInRight 1s ease-out;
+
+        //Change for the <button> element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
