--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -8,7 +8,9 @@
     }
 
     &__text {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
+        line-height: 1.9;
+        font-weight: 300;
         width: 80%;
         margin: 0 auto;
     }
@@ -27,7 +29,11 @@
         }
     }
 
-    
+    &__form {
+        text-align: center;
+        width: 50vw;
+        margin: 0 auto;
+    }
 
 
 }
