--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,9 @@
 @import "components/intro";
 @import "components/highlight";
 @import "components/form";
+@import "components/quote";
+@import "components/hyperlink";
+
 
 
 
@@ -24,6 +27,7 @@
 
 
 @import "pages/home";
+@import "pages/hypnosis";
 
 
 
