Finished the Treatment program section and Privacy section

--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -47,6 +47,10 @@
     color: $color-white;
     cursor: pointer;
 
+    &--left {
+        margin-left: 0px;
+    }
+
     &:hover {
         color: $color-light-1;
         transition: all .2s;
