--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,8 @@ img {
   border: none;
   color: #fff;
   cursor: pointer; }
+  .btn__secondary--left {
+    margin-left: 0px; }
   .btn__secondary:hover {
     color: #e1dfd0;
     transition: all .2s; }
@@ -206,11 +208,17 @@ img {
     animation-timing-function: ease-out; }
     @media (max-width: 37.5em) {
       .contact__details {
-        font-size: 1.3rem; } }
+        font-size: 1.5rem; } }
   .contact__form {
     text-align: center;
     width: 50vw;
     margin: 0 auto; }
+    @media (max-width: 75em) {
+      .contact__form {
+        width: 80vw; } }
+    @media (max-width: 37.5em) {
+      .contact__form {
+        width: 90vw; } }
 
 /*PAGE HERO section*/
 .hero__page {
@@ -264,7 +272,7 @@ img {
 .hero__treatment {
   height: 70vh;
   width: 100%;
-  background-image: url(../img/treatment-programs-CTA-large.jpg);
+  background-image: url(../img/treatment-programs-CTA-large-2000x1125.jpg);
   background-size: cover;
   background-position: top;
   position: relative; }
@@ -426,6 +434,50 @@ blockquote cite:before {
     border-bottom: none; }
   .text__hyperlink:active {
     color: #e1dfd0; }
+
+@media (max-width: 37.5em) {
+  .program {
+    margin-top: 0;
+    margin-bottom: 2.5rem; }
+    .program__image {
+      display: none; }
+    .program__content {
+      padding: 2rem 0 !important; } }
+
+.program__details {
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left; }
+
+.program__image {
+  width: 100%; }
+
+.program__content {
+  padding: 3.5rem;
+  box-sizing: border-box;
+  text-align: left; }
+
+.program__title {
+  text-transform: uppercase;
+  font-size: 1.4rem; }
+
+.program__price {
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  font-weight: 300;
+  margin-top: 1rem; }
+
+@media (min-width: 1250px) {
+  .program {
+    padding: 3rem;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between; }
+    .program__details {
+      padding: 0;
+      box-sizing: border-box;
+      flex-basis: 48%;
+      box-shadow: 0 1.5rem 4rem rgba(49, 33, 33, 0.15); } }
 
 .header {
   position: fixed;
