--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,7 +1,6 @@
 .contact {
     background-color: $color-light-1;
     
-
     &__box {
         padding: 2rem 0;
         text-align: center;
@@ -25,7 +24,7 @@
 
         
         @include respond(phone) {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
         }
     }
 
@@ -33,7 +32,13 @@
         text-align: center;
         width: 50vw;
         margin: 0 auto;
+
+        @include respond(tab-land) {
+            width: 80vw;
+        }
+
+        @include respond(phone) {
+            width: 90vw;
+        }
     }
-
-
 }
