--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,5 +1,6 @@
 
 /*COLORS SASS VARIABLES*/
+$color-light-0: #fef9e5;
 $color-light-1:  #e1dfd0;
 $color-light-2: #bab491;
 $color-medium: #6e6745;
@@ -10,4 +11,3 @@ $color-white: #fff;
 $color-alert: #fceba9;
 $color-form-invalid: #ff7730;
 $color-form-valid: #55c57a;
-
