--- a/sass/components/_hyperlink.scss
+++ b/sass/components/_hyperlink.scss
@@ -7,7 +7,7 @@
     }
     /* visited link */
     &:visited {
-        color: $color-light-2;
+        color: $color-form-invalid;
     }
     /* mouse over link */
     &:hover {
