--- a/sass/components/_program.scss
+++ b/sass/components/_program.scss
@@ -1,3 +1,4 @@
+///////TREATMENT PROGRAMS/////
 .program {
 
   @include respond(phone) {
@@ -11,12 +12,44 @@
     &__content {
       padding: 2rem 0 !important;
     }
-}
+
+  }
+
+  @include respond(tab-land) {
+    //////ONLINE CONSULTATIONS/////
+    &__content--yellow {
+      padding: 2.4rem !important;
+      margin-top: 2rem;
+    }  
+  }
+
+  @include respond(tab-port) {
+    //////ONLINE CONSULTATIONS/////
+    &__content--yellow {
+      padding: 2.8rem !important;
+      margin-top: 2rem;
+    }  
+  }
+
+  @include respond(phone) {
+    //////ONLINE CONSULTATIONS/////
+    &__content--yellow {
+      padding: 2.4rem !important;
+      margin-top: 2rem;
+    }  
+  }
 
   &__details {
         box-sizing: border-box;
         width: 100%;
         text-align: left;
+        
+
+    //////ONLINE CONSULTATIONS/////
+    &--yellow {
+      background-color: $color-light-0;
+      margin-bottom: 3.5rem;
+    }
   }
 
   &__image {
@@ -54,6 +87,12 @@
         box-sizing: border-box;
         flex-basis: 48%;
         box-shadow: 0 1.5rem 4rem rgba(49, 33, 33, 0.15);
+
+        &--yellow {
+          padding: 3.5rem;
+        }
       }
   }
 }
+
+
