--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,3 +29,17 @@ img {
     margin-left: auto;
     margin-right: auto;
 } 
+
+//////ONLINE CONSULTATIONS/////
+.wrapper__online {
+    max-width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+
+    @include respond(tab-land) {
+        //////ONLINE CONSULTATIONS/////
+        & {
+            max-width: 100%;
+        }  
+      }
+} 
