--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,8 @@ img {
     border: none;
     border-bottom: 2px solid transparent;
     width: 100%;
-    display: block; }
+    display: block;
+    transition: all .3s; }
     .form__input:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba(47, 44, 30, 0.1);
