--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,6 +15,7 @@ text-align: left;
         border-bottom: 2px solid transparent;
         width: 100%;
         display: block;
+        transition: all .3s;
 
         &:focus {
             outline: none;
