--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     z-index: 100;
-    background: $color-white;
+    background: $color-light-2;
     backface-visibility: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
     overflow: hidden;
