Chnaged the logo in the Header section

--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ blockquote cite:before {
   position: fixed;
   width: 100%;
   z-index: 100;
-  background: #bab491;
+  background: #fff;
   backface-visibility: hidden;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   overflow: hidden;
@@ -558,7 +558,7 @@ blockquote cite:before {
 /* SVG logo style*/
 #header__logo {
   float: left;
-  height: 120px;
+  height: 125px;
   width: auto;
   display: block;
   padding: 25px 40px; }
