--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,8 @@
 @import "components/quote";
 @import "components/hyperlink";
 @import "components/program";
+@import "components/services";
+
 
 
 
