--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -152,4 +152,29 @@
         // }
     }
 
+     /* HERO SERVICES page*/
+     .hero__services {
+        height: 70vh;
+        width: 100%;
+        background-image: url(../img/services-CTA-large-2000x1125.jpg);
+        background-size: cover;
+        background-position: top;
+        position: relative;
+    
+        @include respond(tab-land) {
+            height: 45vh;
+        }
+    
+        //IF THERE IS HEADING TEXT
+        // &__text-box {
+        //     position: absolute;
+        //     z-index: 4;
+        //     top: 55%;
+        //     left: 50%;
+        //     transform: translate(-50%, -50%);
+        //     text-align: center;
+        // }
+    }
+
+
 
