--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,17 +1,26 @@
-.services {
-  padding: 3rem 0;
-  display: flex;
-  //align-items: stretch;
-  justify-content: center;
-
-  &__box {
-    padding: 3rem;
+@include respond(tab-port) {
+  .services {
+    padding: 3rem 0;
     box-sizing: border-box;
-    flex-basis: 48%;
-    text-align: left;
   }
+}
 
-  &__image {
-    width: 100%;
-  }
+@media (min-width: 900px) {
+
+  .services {
+    padding: 3rem 0;
+    box-sizing: border-box;
+    display: flex;
+    //align-items: stretch;
+    justify-content: space-between;
+
+    &__box {
+      flex-basis: 45%;
+      text-align: left;
+    }
+
+    &__image {
+      width: 100%;
+    }
+}
 }
