--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,6 @@
 h4 {
   text-transform: uppercase;
-  font-size: 1rem;
-  color: lighten($color:$color-form-invalid, $amount:20);
+  font-size: 2rem;
+  font-weight: 300;
+  color: lighten($color:$color-form-invalid, $amount:10);
 }
