--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -176,5 +176,29 @@
         // }
     }
 
+/* HERO Psychological SERVICES page*/
+.hero__psycho--services {
+    height: 70vh;
+    width: 100%;
+    background-image: url(../img/Psychological-services-2000x1115.jpg);
+    background-size: cover;
+    background-position: top;
+    position: relative;
+
+    @include respond(tab-land) {
+        height: 45vh;
+    }
+
+    //IF THERE IS HEADING TEXT
+    // &__text-box {
+    //     position: absolute;
+    //     z-index: 4;
+    //     top: 55%;
+    //     left: 50%;
+    //     transform: translate(-50%, -50%);
+    //     text-align: center;
+    // }
+}
+
 
 
