--- a/sass/components/_hyperlink.scss
+++ b/sass/components/_hyperlink.scss
@@ -19,3 +19,25 @@
         color: $color-light-1;
     }
 }
+
+.text__hyperlink--highlight {
+    /* unvisited link */ 
+    &:link {
+        color: $color-medium;
+        text-decoration: none;
+        border-bottom: 1px solid;
+    }
+    /* visited link */
+    &:visited {
+        color: $color-form-invalid;
+    }
+    /* mouse over link */
+    &:hover {
+        color: $color-form-invalid;
+        border-bottom: none;
+    }
+    /* active link */
+    &:active {
+        color: $color-white;
+    }
+}
