Final changes to the pages, changed the link path as well

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -24,6 +24,10 @@
     margin-bottom: 3.5rem;
 }
 
+.u-margin__bottom--extra-large {
+    margin-bottom: 5.5rem;
+}
+
 ////////ALIGN CENTER/////
 .u-center {
     text-align: center;
