--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,9 @@ h4 {
 .u-margin__bottom--large {
   margin-bottom: 3.5rem; }
 
+.u-margin__bottom--extra-large {
+  margin-bottom: 5.5rem; }
+
 .u-center {
   text-align: center; }
 
@@ -160,6 +163,10 @@ h4 {
     color: #ff7730;
     transform: all 2s; }
 
+@media (max-width: 75em) {
+  #featured__one {
+    display: none; } }
+
 @media (max-width: 37.5em) {
   .featured {
     margin-top: 0;
@@ -194,7 +201,7 @@ h4 {
   font-size: 1.2rem;
   font-weight: 300; }
 
-@media (min-width: 1250px) {
+@media (min-width: 1200px) {
   .featured {
     display: flex;
     align-items: center;
@@ -203,7 +210,9 @@ h4 {
       padding: 3rem;
       box-sizing: border-box;
       flex-basis: 48%;
-      text-align: center; } }
+      text-align: center; }
+  #featured__two {
+    display: none; } }
 
 .contact {
   background-color: #e1dfd0; }
@@ -570,20 +579,34 @@ blockquote cite:before {
       .program__details--yellow {
         padding: 3.5rem; } }
 
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .services {
-    padding: 3rem 0;
-    box-sizing: border-box; } }
+    box-sizing: border-box; }
+    .services__box {
+      padding: 3rem;
+      box-shadow: 0 1.5rem 4rem rgba(49, 33, 33, 0.15);
+      margin-bottom: 5rem; } }
 
-@media (min-width: 900px) {
+@media (max-width: 37.5em) {
   .services {
-    padding: 3rem 0;
+    padding: 0rem;
+    box-sizing: border-box; }
+    .services__box {
+      padding: 0rem;
+      box-shadow: none;
+      margin-bottom: 5rem; } }
+
+@media (min-width: 1200px) {
+  .services {
+    padding: 3rem;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between; }
     .services__box {
+      padding: 3rem;
       flex-basis: 45%;
-      text-align: left; }
+      text-align: left;
+      box-shadow: 0 1.5rem 4rem rgba(49, 33, 33, 0.15); }
     .services__image {
       width: 100%; } }
 
