Changes on multiple files

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 1800px +: Big screens
 
 $breakpoint argument choices:
+- iPhone5
 - phone
 - tab-port
 - tab-land
@@ -598,7 +599,7 @@ blockquote cite:before {
 
 @media (min-width: 1200px) {
   .services {
-    padding: 3rem;
+    padding-top: 3rem;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between; }
@@ -836,6 +837,13 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+  @media (max-width: 37.5em) {
+    .hero {
+      height: 100vh; } }
+  @media (max-width: 20em) {
+    .hero {
+      height: 100vh;
+      background-image: none; } }
 
 .hero__heading-primary {
   color: #2f2c1e;
@@ -851,8 +859,33 @@ footer {
   /* animation-delay: 2s; */ }
   @media (max-width: 37.5em) {
     .hero__heading-primary {
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       margin-top: 1.5rem; } }
+  @media (max-width: 20em) {
+    .hero__heading-primary {
+      font-size: 1.2rem;
+      margin-top: 2.4rem; } }
+
+.hero__heading-secondary {
+  color: #2f2c1e;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-bottom: 30px;
+  backface-visibility: hidden;
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  /* animation-iteration-count: 2; */
+  /* animation-delay: 2s; */ }
+  @media (max-width: 37.5em) {
+    .hero__heading-secondary {
+      font-size: 1rem;
+      margin-top: 1.2rem; } }
+  @media (max-width: 20em) {
+    .hero__heading-secondary {
+      font-size: .7rem;
+      margin-top: 1rem; } }
 
 .home__intro {
   padding: 4rem 0;
