--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -31,7 +31,7 @@
 @media (min-width: 1200px) {
 
   .services {
-    padding: 3rem;
+    padding-top: 3rem;
     box-sizing: border-box;
     display: flex;
     //align-items: stretch;
