--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,6 +16,15 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
+
+    @include respond(phone) {
+        height: 100vh;
+    }
+
+    @include respond(iPhone5) {
+        height: 100vh;
+        background-image: none;
+    }
 }
 
 .hero__heading-primary {
@@ -33,9 +42,42 @@
     /* animation-iteration-count: 2; */
     /* animation-delay: 2s; */
 
+   
     @include respond(phone) {
-        font-size: 1.6rem;
+        font-size: 1.8rem;
         margin-top: 1.5rem;
+    }  
+
+    @include respond(iPhone5) {
+        font-size: 1.2rem;
+        margin-top: 2.4rem;
+    }
+}
+
+.hero__heading-secondary {
+    color: $color-dark;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-bottom: 30px;
+    backface-visibility: hidden;
+
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+
+    /* animation-iteration-count: 2; */
+    /* animation-delay: 2s; */
+
+    
+    @include respond(phone) {
+        font-size: 1rem;
+        margin-top: 1.2rem;
+    }
+
+    @include respond(iPhone5) {
+        font-size: .7rem;
+        margin-top: 1rem;
     }
 }
 
